syntax = "proto3";

package graphIR;

message GraphInfo {
    string model_name         = 1;
    string framework_name     = 2;
    string framework_version  = 3;
    string graphgen_name      = 4;
    string graphgen_version   = 5;
    string graph_version      = 6;
    string description        = 7;
    map<string, string> attrs = 8;
}
message IOArg {
    string name              = 1;
    string dtype             = 2;
    int32 dbytes             = 3;
    repeated int32 shape     = 4; 
}

message InitArg {
    int64 dbytes             = 1;
    string data_base64       = 2;
}

message Node {
    string               name           = 1;
    string               op             = 2; 
    repeated IOArg       inputs         = 3;
    repeated IOArg       outputs        = 4;
    map<string, string>  attrs          = 5; 
    map<string, string>  ext_attrs      = 6;  
    map<string, InitArg> init_attrs     = 7; 
}

message Graph {
    GraphInfo graph_info = 1;
    repeated Node nodes = 2;
}
